--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,13 @@
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/c81abeee09.js" crossorigin="anonymous"></script>
 
+    <!-- Animations -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
   </head>
 
   <body>
     <div id="root"></div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
 </html>
